# BlackboardCaptor

./: ReadMe.md  ReadMe.zh-CN.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: detection.hpp  interface.hpp  transformation.hpp
app/src/main/cpp/src/: detection.cpp  interface.cpp  transformation.cpp
app/src/main/java/net/fangd/bbc/: MainActivity.kt  MyUtils.kt
app/src/main/res/drawable/: bbc_logo_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/mipmap-anydpi-v26/: bbc_logo.xml
app/src/main/res/values/: bbc_logo_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
